# test

./: .dockerignore  .env  .gitignore  .replit  LICENSE  Procfile  README.md  app.json  create_country_codes.py  create_sample_data.py  create_test_users.py  deploy_tasks.sh  home_temp.html  language_section.txt  language_selector.txt  new_button_styles.txt  new_categories_section.txt  new_css_header.txt  new_hero_section.txt  new_product_card_styles.txt  pyproject.toml  render.yaml  render_main.yaml  replit_deploy.py  requirements.txt  update_home.py  update_new_arrivals.py  update_search_results.py
.github/workflows/: django-app.yml  django-build.yml  django-deploy.yml
cart/: cart.py  urls.py  views.py
cart/templates/cart/: cart.html
clothing_store/: asgi.py  settings.py  settings_prod.py  settings_replit.py  urls.py  wsgi.py
core/: views.py
core/templates/core/: about.html  base.html  base.html.bak  contact.html  home.html  home.html.bak
dashboard/: urls.py  views.py
dashboard/templates/dashboard/: analytics.html  customers.html  index.html  (+2 more)
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_productlabel_productlabelrelation.py
static/js/: main.js
staticfiles/css/: custom.css
users/: backends.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_countrycode_profile_is_email_verified_and_more.py
wishlist/: models.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
(+15 files in other folders)
